# ai_customer_support

./: .dockerignore  .env.example  .gitignore  PROJECT_PROPOSAL.md  README.md  alembic.ini  compose.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/: __init__.py
apps/api/: __init__.py  dependencies.py  main.py
apps/api/routes/: auth.py  documents.py  health.py  workspaces.py
apps/web/: eslint.config.js  index.html  openapi.json  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/web/e2e/: foundation.spec.ts
apps/web/src/: App.tsx  api.test.ts  api.ts  auth.tsx  main.tsx  styles.css  types.ts
apps/web/src/components/: AppShell.tsx
apps/worker/: __init__.py  main.py
docs/: demo-script.md  threat-model.md  week-1-development-report.md  week-1-review-report.md  week-2-preview-plan.md  week-2-review-report.md  week-3-preview-plan.md  weekly-progress.md
docs/adr/: 0001-modular-monolith.md  0002-tenant-isolation.md  0003-authentication-sessions.md  0004-document-lifecycle-and-durable-jobs.md  0005-postgresql-and-pgvector.md  0006-lab-evaluation-and-single-rag-production-pipeline.md  README.md
docs/architecture/: overview.md
infra/docker/: api.Dockerfile  web.Dockerfile
infra/nginx/: default.conf
infra/postgres/init/: 001-roles.sql  002-test-database.sql
migrations/: README  env.py
migrations/versions/: 20260713_0001_week1_foundation.py  20260716_0002_document_lifecycle.py
scripts/: check.ps1  export_openapi.py
tests/: conftest.py
tests/integration/: test_auth_api.py  test_document_api.py  test_durable_jobs.py  test_migration_safety.py  test_workspace_api.py
tests/security/: test_tenant_isolation.py
tests/unit/: test_document_uploads.py  test_passwords.py  test_rbac.py  test_settings.py  test_tokens.py
(+6 files in other folders)
