[project]
name = "supportpilot"
version = "0.1.0"
description = "Enterprise-style multi-tenant AI customer support platform"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.14,<2",
  "asyncpg>=0.30,<1",
  "email-validator>=2.2,<3",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "pwdlib[argon2]>=0.2,<1",
  "pydantic-settings>=2.7,<3",
  "psycopg[binary]>=3.2,<4",
  "pyjwt[crypto]>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "sqlalchemy[asyncio]>=2.0.36,<3",
  "structlog>=24.4,<27",
  "uvicorn[standard]>=0.34,<1",
]

[dependency-groups]
dev = [
  "hypothesis>=6.120,<7",
  "mypy>=1.14,<3",
  "pre-commit>=4,<5",
  "pytest>=8.3,<10",
  "pytest-asyncio>=0.25,<2",
  "pytest-cov>=6,<8",
  "ruff>=0.9,<1",
  "schemathesis>=4,<5",
  "testcontainers[postgres]>=4.9,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "packages"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config -ra"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
  "integration: requires a PostgreSQL database",
  "security: tenant-isolation and authentication security tests",
]

[tool.coverage.run]
branch = true
concurrency = ["greenlet", "thread"]
source = ["apps", "packages"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S", "RUF"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]
"migrations/**/*.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["migrations"]
